--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,12 @@ jobs:
           environment:
             NATS_URI:  nats://127.0.0.1:4222
             NATS_URI_TEST:  nats://127.0.0.1:4222
-      - run: pip install docker-compose
+      - run:
+          name: Install Docker Compose
+          command: |
+            set -x
+            sudo curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
       - run: git clone git@github.com:ernestio/toolset.git
       - run: cd toolset/ernestci/ && gem install bundler && bundle install
       - run:
@@ -36,3 +41,8 @@ jobs:
 #- docker kill `docker ps | grep nats | awk '{print $1}'`
 #- ruby $ROOTPATH/toolset/ernestci/run.rb .ernest-ci
 #- make lint
+
+
+
+
+@datacenter_update @service_reset
