--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,9 @@ jobs:
           name: install docker compose
           command: |
             set -x
-            sudo curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m`
+            sudo curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` -O docker-compose
             sudo chmod +x docker-compose
-            sudo mv docker-compose /usr/local/bin/docker-compose -O docker-compose
+            sudo mv docker-compose /usr/local/bin/docker-compose
       - run: git clone git@github.com:ernestio/toolset.git
       - run: cd toolset/ernestci/ && gem install bundler && bundle install
       - run:
