--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,7 +38,7 @@
   name = "github.com/lib/pq"
 
 [[constraint]]
-  name = "github.com/nats-io/nats"
+  name = "github.com/nats-io/go-nats"
   version = "1.3.0"
 
 [[constraint]]
